--- a/Quickstart/BoostlingoQuickstart/Base.lproj/Main.storyboard
+++ b/Quickstart/BoostlingoQuickstart/Base.lproj/Main.storyboard
@@ -29,16 +29,16 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="boostlingo_ios_test" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BoostlingoQuickstart" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="891"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D20-Jv-8fh">
-                                <rect key="frame" x="0.0" y="88" width="414" height="554"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="592"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdJ-aT-LGc">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="554"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="592"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Region" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXW-iO-8OG">
                                                 <rect key="frame" x="16" y="8" width="382" height="21"/>
@@ -279,6 +279,16 @@
                                                     <action selector="btnHangUpTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ag4-q1-IvW"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="85H-zd-zj5">
+                                                <rect key="frame" x="16" y="530" width="382" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="QgA-wQ-2Oi"/>
+                                                </constraints>
+                                                <state key="normal" title="Last Call Details"/>
+                                                <connections>
+                                                    <action selector="btnLastCallDetailsTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RLW-Yn-nxi"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -297,6 +307,7 @@
                                             <constraint firstItem="8Gi-OK-e81" firstAttribute="top" secondItem="zad-AO-Hua" secondAttribute="bottom" constant="8" id="9VB-c5-IcI"/>
                                             <constraint firstAttribute="trailing" secondItem="14O-Nf-xe9" secondAttribute="trailing" constant="16" id="9zt-fi-7hP"/>
                                             <constraint firstItem="7fB-4D-EE7" firstAttribute="leading" secondItem="hdJ-aT-LGc" secondAttribute="leading" constant="16" id="C6J-rX-ssJ"/>
+                                            <constraint firstItem="85H-zd-zj5" firstAttribute="leading" secondItem="hdJ-aT-LGc" secondAttribute="leading" constant="16" id="CIQ-wh-hgL"/>
                                             <constraint firstItem="3KA-2i-g7K" firstAttribute="top" secondItem="Rqa-Yx-67f" secondAttribute="bottom" constant="4" id="Ccf-LB-Cbn"/>
                                             <constraint firstAttribute="trailing" secondItem="Apr-fL-Tzu" secondAttribute="trailing" constant="16" id="FaN-WM-Db4"/>
                                             <constraint firstAttribute="trailing" secondItem="qTN-xZ-r1B" secondAttribute="trailing" constant="16" id="FwC-gl-eUO"/>
@@ -304,12 +315,12 @@
                                             <constraint firstItem="vpu-AM-R14" firstAttribute="leading" secondItem="hdJ-aT-LGc" secondAttribute="leading" constant="16" id="HVo-Ow-bCd"/>
                                             <constraint firstItem="jXW-iO-8OG" firstAttribute="leading" secondItem="hdJ-aT-LGc" secondAttribute="leading" constant="16" id="Jau-Yf-IOc"/>
                                             <constraint firstItem="Cki-wu-56E" firstAttribute="top" secondItem="7fB-4D-EE7" secondAttribute="bottom" constant="8" id="KEK-yv-hc6"/>
+                                            <constraint firstAttribute="bottom" secondItem="85H-zd-zj5" secondAttribute="bottom" constant="32" id="R8k-By-lH6"/>
                                             <constraint firstItem="14O-Nf-xe9" firstAttribute="top" secondItem="RNM-Ya-LRM" secondAttribute="bottom" constant="8" id="ROl-im-IMc"/>
                                             <constraint firstItem="i38-vN-koI" firstAttribute="top" secondItem="7Nk-mW-OiV" secondAttribute="bottom" constant="8" id="Sao-fc-gzz"/>
                                             <constraint firstAttribute="trailing" secondItem="wLa-o1-A84" secondAttribute="trailing" constant="16" id="Sw7-xb-ER8"/>
                                             <constraint firstAttribute="trailing" secondItem="itE-7j-PHL" secondAttribute="trailing" constant="16" id="TKW-kG-lQF"/>
                                             <constraint firstItem="7fB-4D-EE7" firstAttribute="top" secondItem="vpu-AM-R14" secondAttribute="bottom" constant="8" id="U7q-6i-W1i"/>
-                                            <constraint firstAttribute="bottom" secondItem="3Xt-Qd-gtF" secondAttribute="bottom" constant="32" id="VMU-Yu-24L"/>
                                             <constraint firstItem="qTN-xZ-r1B" firstAttribute="top" secondItem="i38-vN-koI" secondAttribute="bottom" constant="4" id="Wy0-Oe-asP"/>
                                             <constraint firstAttribute="trailing" secondItem="KOH-JK-2oF" secondAttribute="trailing" constant="16" id="XmU-Wv-0wi"/>
                                             <constraint firstItem="08G-ag-qfr" firstAttribute="top" secondItem="7fB-4D-EE7" secondAttribute="bottom" constant="13" id="YHC-wh-47C"/>
@@ -337,6 +348,7 @@
                                             <constraint firstItem="zad-AO-Hua" firstAttribute="leading" secondItem="hdJ-aT-LGc" secondAttribute="leading" constant="16" id="m0n-uw-Qxn"/>
                                             <constraint firstItem="Apr-fL-Tzu" firstAttribute="leading" secondItem="GVP-Hp-hKE" secondAttribute="trailing" constant="16" id="ma8-xz-bGe"/>
                                             <constraint firstItem="3Xt-Qd-gtF" firstAttribute="top" secondItem="Cki-wu-56E" secondAttribute="bottom" constant="8" id="mi4-Ee-r5e"/>
+                                            <constraint firstAttribute="trailing" secondItem="85H-zd-zj5" secondAttribute="trailing" constant="16" id="mya-o4-Gw9"/>
                                             <constraint firstAttribute="trailing" secondItem="i38-vN-koI" secondAttribute="trailing" constant="16" id="n6U-L8-LHG"/>
                                             <constraint firstItem="7Nk-mW-OiV" firstAttribute="leading" secondItem="hdJ-aT-LGc" secondAttribute="leading" constant="16" id="ogT-e9-dCe"/>
                                             <constraint firstAttribute="trailing" secondItem="8Gi-OK-e81" secondAttribute="trailing" constant="16" id="pZc-yy-PDe"/>
@@ -347,6 +359,7 @@
                                             <constraint firstAttribute="trailing" secondItem="Xy1-2x-Er1" secondAttribute="trailing" constant="16" id="u8a-tg-2hC"/>
                                             <constraint firstAttribute="trailing" secondItem="7fB-4D-EE7" secondAttribute="trailing" constant="16" id="xP9-rT-7he"/>
                                             <constraint firstItem="wLa-o1-A84" firstAttribute="leading" secondItem="3KA-2i-g7K" secondAttribute="trailing" constant="16" id="yBr-cs-gIe"/>
+                                            <constraint firstItem="85H-zd-zj5" firstAttribute="top" secondItem="3Xt-Qd-gtF" secondAttribute="bottom" constant="8" id="zGz-b1-wcR"/>
                                             <constraint firstItem="Rqa-Yx-67f" firstAttribute="leading" secondItem="hdJ-aT-LGc" secondAttribute="leading" constant="16" id="zef-Td-LqQ"/>
                                         </constraints>
                                     </view>
@@ -378,6 +391,7 @@
                         <outlet property="btnHangUp" destination="3Xt-Qd-gtF" id="bVL-xX-RFV"/>
                         <outlet property="btnLanguageFrom" destination="TEa-1G-T00" id="D99-WS-25q"/>
                         <outlet property="btnLanguageTo" destination="itE-7j-PHL" id="Xqf-Lb-r4j"/>
+                        <outlet property="btnLastCallDetails" destination="85H-zd-zj5" id="WZM-gz-cur"/>
                         <outlet property="btnRegion" destination="Apr-fL-Tzu" id="2uA-co-PAE"/>
                         <outlet property="btnServiceType" destination="qTN-xZ-r1B" id="u7c-0u-vDi"/>
                         <outlet property="btnSignIn" destination="KOH-JK-2oF" id="jy4-sq-Px6"/>
@@ -399,7 +413,7 @@
         <!--Table View Controller-->
         <scene sceneID="fgQ-Vu-Fdf">
             <objects>
-                <tableViewController id="hrm-Xf-eDJ" customClass="TableViewController" customModule="boostlingo_ios_test" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="hrm-Xf-eDJ" customClass="TableViewController" customModule="BoostlingoQuickstart" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Gv4-ib-xs5">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
